--- a/static/index.html
+++ b/static/index.html
@@ -8,9 +8,6 @@
 </head>
 <body>
 <h1>EJS Cats</h1>
-<img src="./images/cat1.jpg" alt="cat 1">
-<img src="./images/cat2.jpg" alt="cat 2">
-<img src="./images/cat3.jpg" alt="cat 3">
-
+<p><a href="/cats">Featured Cats</a> </p>
 </body>
 </html>
